Aggregate tax rates from PASSED policies